fix: Add Resume window and Note window with markdown support fix: Update styles to prevent overflow issues

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,7 @@ html, body,#root {
 }
 body{
     background-color: black;
+    overflow: hidden;
 }
 
 main{
