--- a/src/components/Windows/note.scss
+++ b/src/components/Windows/note.scss
@@ -3,4 +3,11 @@
     overflow: auto;
     height: 100%;
     padding-bottom: 10rem;
+
+    font-size: 1.1rem;
+
+
+    .pre{
+        background-color: black !important;
+    }
 }
