--- a/src/components/Windows/window.scss
+++ b/src/components/Windows/window.scss
@@ -44,4 +44,17 @@
     .main-content{
    height: 100%;
     }
+    *::-webkit-scrollbar {
+        width: 8px;
+    }
+    *::-webkit-scrollbar-track {
+        background: transparent;
+    }
+    *::-webkit-scrollbar-thumb {
+        background-color: rgba(169, 169, 169, 0.5);
+        border-radius: 20px;
+        border: none;
+    }
+
+    
 }
